--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- header with background and logo -->
+    <header>
 
+    </header>
+    <!-- /header with background and logo -->
+
+    <main>
+        <!-- Titol section -->
+        <section></section>
+        <!-- /Titol section -->
+
+        <!-- Photo section -->
+        <section></section>
+        <!-- /Photo section -->
+
+        <!-- First text section -->
+        <section></section>
+        <!-- /First text section -->
+
+        <!-- Table section -->
+        <section></section>
+        <!-- /Table section -->
+
+        <!-- Second text section -->
+        <section></section>
+        <!-- Second text section -->
+    </main>
+
+    <!-- Footer with related content -->
+    <footer>
+        
+    </footer>
+    <!-- /Footer with related content -->
 </body>
 </html>
