HTML header and titol section

--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Booleaner</title>
+    <title>Il manifesto di Tim Berners-Lee | The Booleaner</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- header with background and logo -->
     <header>
-
+        <img src="img/logo.svg" alt="The Booleaner Logo">
     </header>
     <!-- /header with background and logo -->
 
     <main>
         <!-- Titol section -->
-        <section></section>
+        <section>
+            <h1>Internet deve essere al servizio del "bene pubblico": il Manifesto di Tim Berners-Lee</h1>
+            <p id="author">Scritto da <a href="http://google.com">The Booleaner</a></p>
+            <p id="date">il 10/10/2020</p>
+        </section>
         <!-- /Titol section -->
 
         <!-- Photo section -->
