HTML Photo Section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- header with background and logo -->
     <header>
-        <img src="img/logo.svg" alt="The Booleaner Logo">
+        <a href="#"><img src="img/logo.svg" alt="The Booleaner Logo"></a>
     </header>
     <!-- /header with background and logo -->
 
@@ -18,13 +18,18 @@
         <!-- Titol section -->
         <section>
             <h1>Internet deve essere al servizio del "bene pubblico": il Manifesto di Tim Berners-Lee</h1>
-            <p id="author">Scritto da <a href="http://google.com">The Booleaner</a></p>
+            <p id="author">Scritto da <a href="http://google.com" target=”_blank”>The Booleaner</a></p>
             <p id="date">il 10/10/2020</p>
         </section>
         <!-- /Titol section -->
 
         <!-- Photo section -->
-        <section></section>
+        <section>
+            <img src="img/tim-1.jpg" alt="Tim Berners-Lee at John S. and James L. Knight Foundation">
+            <img src="img/tim-2.jpg" alt="Tim Berners-Lee at Wikimedia, by Paul Clarke">
+            <small>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</small>
+            <small>2nd Photo: Wikimedia, by Paul Clarke</small>
+        </section>
         <!-- /Photo section -->
 
         <!-- First text section -->
