HTML Content Section

--- a/index.html
+++ b/index.html
@@ -32,17 +32,43 @@
         </section>
         <!-- /Photo section -->
 
-        <!-- First text section -->
-        <section></section>
-        <!-- /First text section -->
-
-        <!-- Table section -->
-        <section></section>
-        <!-- /Table section -->
-
-        <!-- Second text section -->
-        <section></section>
-        <!-- Second text section -->
+        <!-- Content section -->
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus minus quo eius ea enim officiis excepturi aperiam corporis, distinctio accusantium voluptate sed dicta! Facere, qui quaerat libero eius distinctio repellat?<span class="highlighted">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</span> A nobis recusandae et optio, provident, earum incidunt architecto amet reiciendis doloribus facilis, dolores neque natus minima assumenda consequatur. Modi, blanditiis nulla?</p>
+            <ul>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo corporis repellendus iste qui necessitatibus natus.</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo corporis repellendus iste qui necessitatibus natus.</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo corporis repellendus iste qui necessitatibus natus.</li>
+            </ul>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod labore, beatae dolore molestias ratione libero doloribus</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod labore, beatae dolore molestias ratione libero doloribus</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod labore, beatae dolore molestias ratione libero doloribus</td>
+                    </tr>
+                </tbody>
+            </table>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt soluta quo neque accusantium odio? Ea consequuntur cumque esse libero maxime quod nulla eos adipisci, veritatis officia corrupti ex quas. Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="highlighted">Corporis, explicabo asperiores obcaecati iusto sequi vitae corrupti.</span> Inventore officiis dolor, quas totam fugit ullam at eligendi qui dolore accusantium rem porro.</p>
+    
+        <!-- Content section -->
     </main>
 
     <!-- Footer with related content -->
