--- a/index.html
+++ b/index.html
@@ -67,13 +67,18 @@
                 </tbody>
             </table>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt soluta quo neque accusantium odio? Ea consequuntur cumque esse libero maxime quod nulla eos adipisci, veritatis officia corrupti ex quas. Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="highlighted">Corporis, explicabo asperiores obcaecati iusto sequi vitae corrupti.</span> Inventore officiis dolor, quas totam fugit ullam at eligendi qui dolore accusantium rem porro.</p>
-    
-        <!-- Content section -->
+        <!-- /Content section -->
     </main>
 
     <!-- Footer with related content -->
     <footer>
-        
+        <h6></h6>
+        <div id="first-related">
+            <p>Lorem ipsum dolor</p>
+        </div>
+        <div id="first-related">
+            <p>Lorem ipsum dolor</p>
+        </div>
     </footer>
     <!-- /Footer with related content -->
 </body>
