css general rule

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div id="first-related">
             <p>Lorem ipsum dolor</p>
         </div>
-        <div id="first-related">
+        <div id="second-related">
             <p>Lorem ipsum dolor</p>
         </div>
     </footer>
