css Titole section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- header with background and logo -->
     <header>
-        <a href="#"><img src="img/logo.svg" alt="The Booleaner Logo"></a>
+        <a href="#"><img id="logo" src="img/logo.svg" alt="The Booleaner Logo"></a>
     </header>
     <!-- /header with background and logo -->
 
@@ -18,8 +18,8 @@
         <!-- Titol section -->
         <section>
             <h1>Internet deve essere al servizio del "bene pubblico": il Manifesto di Tim Berners-Lee</h1>
-            <p id="author">Scritto da <a href="http://google.com" target=”_blank”>The Booleaner</a></p>
-            <p id="date">il 10/10/2020</p>
+            <p>Scritto da <a id="author" href="http://google.com" target=”_blank”>The Booleaner</a><br>
+            <span class="small">il 10/10/2020</span></p> 
         </section>
         <!-- /Titol section -->
 
