css Content and table

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <section>
             <img src="img/tim-1.jpg" alt="Tim Berners-Lee at John S. and James L. Knight Foundation">
             <img src="img/tim-2.jpg" alt="Tim Berners-Lee at Wikimedia, by Paul Clarke">
-            <small>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</small>
-            <small>2nd Photo: Wikimedia, by Paul Clarke</small>
+            <p class="note">1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
+            <p class="note">2nd Photo: Wikimedia, by Paul Clarke</p>
         </section>
         <!-- /Photo section -->
 
@@ -52,17 +52,17 @@
                     <tr>
                         <td>Lorem ipsum dolor</td>
                         <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod labore, beatae dolore molestias ratione libero doloribus</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore error dolore qui tenetur non aperiam fugit delectus, blanditiis atque veniam unde eos sunt autem? Dolorem sed ratione vel optio eligendi!</td>
                     </tr>
                     <tr>
                         <td>Lorem ipsum dolor</td>
                         <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod labore, beatae dolore molestias ratione libero doloribus</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore error dolore qui tenetur non aperiam fugit delectus, blanditiis atque veniam unde eos sunt autem? Dolorem sed ratione vel optio eligendi!</td>
                     </tr>
                     <tr>
                         <td>Lorem ipsum dolor</td>
                         <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod labore, beatae dolore molestias ratione libero doloribus</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore error dolore qui tenetur non aperiam fugit delectus, blanditiis atque veniam unde eos sunt autem? Dolorem sed ratione vel optio eligendi!</td>
                     </tr>
                 </tbody>
             </table>
