--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 
     <!-- Footer with related content -->
     <footer>
-        <h6></h6>
+        <p>Potrebbe interessarti</p>
         <div id="first-related">
-            <p>Lorem ipsum dolor</p>
+            <h4>Lorem ipsum dolor</h4>
         </div>
         <div id="second-related">
-            <p>Lorem ipsum dolor</p>
+            <h4>Lorem ipsum dolor</h4>
         </div>
     </footer>
     <!-- /Footer with related content -->
