background header full width

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <!-- header with background and logo -->
     <header>
-        <a href="#"><img id="logo" src="img/logo.svg" alt="The Booleaner Logo"></a>
+        <nav>
+            <a href="#"><img id="logo" src="img/logo.svg" alt="The Booleaner Logo"></a>
+        </nav>
     </header>
     <!-- /header with background and logo -->
 
